# fmcg_sc_data_synth

./: .gitignore  CHANGELOG.md  CLAUDE.md  GEMINI.md  NEXT_STEPS.md  README.md  TODO.md  V046_VALIDATION_STATE.md  analyze_batches.py  cached-exploring-crayon.md  db_connection_notes.txt  debug_production.py  federated-purring-ember.md  fix_plan_phase_c.md  fix_plan_v2.md  forward_tasks.md  gem_postfix_analysis.txt  iridescent-painting-hejlsberg.md  mental_model.md  mighty-crafting-music.md  mkdocs.yml  nested-inventing-mochi.md  next_steps.md  physics.md  physics_overhaul.md  pickup.md  pyproject.toml  revised_targets.md  run_benchmark.py  run_simulation.py  twinkling-drifting-babbage.md  zipf_demand_next_steps.md
.semgrep/: detect_literals.yaml  hardcodes.yaml
archive/tests/: test_core_primitives.py  test_milestone_4.py  test_seasonal_capacity.py
data/static/: us_cities.csv
docs/: changelog.md  index.md  llm_context.md  v85_update.txt  whitepaper.md
docs/architecture/: components.md  index.md
docs/getting-started/: index.md  quickstart.md
docs/planning/: abc_prioritization.md  alignment_and_param_fix.md  calibration_diagnostic_report.md  debug_foxtrot.md  diagnose_and_validate.md  distribution_diagnosis.md  echelon_inventory_logic.md  expansion.md  fix_mrp_starvation.md  forward_fix.md  forward_fix_v023.md  fresh_start_comparison.md  intent.md  mix_opt.md  new-fix.md  roadmap.md  sim_tuning.md  spec.md  triangle.md  v025_forward_path.md  world_builder_overhaul.md
docs/planning/archive/: 365_day_drift_diagnosis.md  regression_investigation.md  roadmap.md
docs/planning/notes/: schema_gap_analysis.md
ontology_feedback_resources/: entity_codes_reference.md  feedback_assessment.md  first_pass_feedback.md  ont_quest_updates.md  pcg.yaml  questions.md
reference/fmcg_example_OLD/: additional_project_summary.md
reference/fmcg_example_OLD/scripts/: generate_data.py
reference/fmcg_example_OLD/tests/: conftest.py  test_landed_cost.py
scripts/: analyze_bullwhip.py  analyze_results.py  calibrate_config.py  compare_scenarios.py  diagnose_phase1.py  diagnose_phase1_v2.py  diagnose_phase1_v3.py  diagnose_phase1_v4.py  diagnose_phase1_v5.py  diagnose_topology.py  erp_schema.sql  export_erp_format.py  extract_entity_codes.py  extract_erp_subset.py  gen_ref_pages.py  generate_static_world.py  generate_warm_start.py  inspect_erp_schema.py  run_standard_sim.py
scripts/analysis/: analyze_batches.py  analyze_bullwhip.py  analyze_results.py  check_plant_balance.py  diagnose_365day.py  diagnose_a_item_fill.py  diagnose_cost.py  diagnose_erp_database.py  diagnose_flow_deep.py  diagnose_service_level.py  diagnose_slob.py  diagnose_supply_chain.py  diagnose_v060_stability.py  find_missing_skus.py  plot_sim_dynamics.py  quick_check.py  slice_data.py  stability_deep_dive.py
scripts/analysis/archive/: analyze_production_mix.py  debug_head.py  find_trapped_inventory.py  verify_world.py
scripts/analysis/diagnostics/: __init__.py  commercial.py  cost_analysis.py  first_principles.py  (+4 more)
scripts/erp/: __init__.py  __main__.py  config.py  friction.py  gl_journal.py  id_mapper.py  invoices.py  master_tables.py  neo4j_headers.py  schema.py  sequence.py  transactional.py  verify.py
src/prism_sim/: constants.py
tests/: test_calibration.py  test_core_primitives.py  test_manufacturing_lines.py  test_milestone_3.py  test_milestone_4.py  test_milestone_5.py  test_milestone_6.py  test_recipe_matrix.py  test_replenishment_refactor.py  test_state_manager.py  test_world_builder.py
(+52 files in other folders)
