[project]
name = "prism-sim"
version = "0.80.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.4.0,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "faker (>=39.0.0,<40.0.0)",
    "pyarrow (>=23.0.0,<24.0.0)",
    "duckdb (>=1.4.4,<2.0.0)",
    "psycopg[binary] (>=3.3.3,<4.0.0)",
]

[tool.poetry]
packages = [{include = "prism_sim", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)"
]
docs = [
    "mkdocs (>=1.6,<2.0)",
    "mkdocs-material (>=9.5,<10.0)",
    "mkdocstrings[python] (>=0.27,<1.0)",
    "mkdocs-gen-files (>=0.5,<1.0)",
    "mkdocs-literate-nav (>=0.6,<1.0)",
    "mkdocs-section-index (>=0.3,<1.0)"
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "D",  # pydocstyle (docstrings)
    "N",  # pep8-naming
    "B",  # flake8-bugbear
    "UP", # pyupgrade
    "PL", # pylint
    "RUF" # ruff specific rules
]
ignore = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in __init__
    "D203", # One blank line before class (conflicts with D211)
    "D205", # 1 blank line required between summary line and description
    "D212", # Multi-line docstring summary at second line (conflicts with D213)
    "D415", # First line should end with a period, question mark, or exclamation point
    "PLC0415", # Import not at top of file (lazy imports used intentionally)
    "PLW0603", # Using the global statement (acceptable in monitor singleton pattern)
]

[tool.ruff.lint.pylint]
max-branches = 50
max-args = 10
max-statements = 160
max-returns = 8

[tool.ruff.lint.per-file-ignores]
"src/prism_sim/agents/replenishment.py" = ["N806"]  # Math notation (mu_L, sigma_L)
"src/prism_sim/generators/network.py" = ["N806"]  # Math notation (R = random)
"scripts/erp/*.py" = ["E501", "PLR2004"]  # Embedded SQL + threshold constants

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
